# OpenGL_Graphics

./: CMakeLists.txt  README.md
task1/691Voropaev/: CMakeLists.txt  main.cpp
task1/691Voropaev/691VoropaevData1/: shader.vert
task1/691Voropaev/common/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp
task2/123Ivanov/: CMakeLists.txt  gl1_SimpleTriangle.cpp
task3/691Voropaev/: CMakeLists.txt  main.cpp
task3/691Voropaev/691VoropaevData2/shaders/: quadDepth.frag  shadow.frag  shadow2.frag  shadow_usualsampler.frag
task3/691Voropaev/common/: Application.cpp  Application.hpp  Camera.cpp  Mesh.hpp  Texture.hpp
